--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,14 @@
+body {
+  background-color: lightblue;
+  text-align: center;
+}
+
+main {
+  margin-right: 20px;
+  margin-left: 20px;
+  background-color: white;
+}
+
 h1 {
     text-align: center;
     color: cornflowerblue;
@@ -8,4 +19,38 @@ img {
     height: 80%;
     display: block;
     margin: auto
+}
+
+.footer {
+  background-color: cornflowerblue;
+  color: white;
+  text-align: center;
+  height: 50px;
+  margin-top: 30px;
+}
+
+nav {
+  text-align: center;
+  background-color: cornflowerblue;
+  padding: 10px;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+}
+
+nav li {
+  display: inline;
+  margin-right: 25px;
+}
+
+nav a {
+  color: white;
+  font-size: 1.5em;
+}
+
+nav a:hover {
+  color: pink;
+  text-decoration: none;
 }
