--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,11 @@ h1 {
     color: cornflowerblue;
   }
 
+h2 {
+  color: lightblue;
+  text-align: center;
+}
+
 img {
     width: 80%;
     height: 80%;
